<resources>
    <string name="app_name">GrowTower Control</string>
    <string name="status_disconnected">Status: Disconnected</string>
    <string name="status_scanning">Status: Scanning...</string>
    <string name="status_connecting">Status: Connecting...</string>
    <string name="status_connected">Status: Connected</string>
    <string name="status_error">Status: Error</string>
    <string name="btn_connect">Connect</string>
    <string name="btn_disconnect">Disconnect</string>
    <string name="label_light">Light Control</string>
    <string name="btn_toggle_light">Toggle Light</string>
    <string name="label_fan">Fan Control</string>
    <string name="btn_set">Set</string>
    <string name="permission_rationale">Bluetooth permissions are required to connect to the GrowTower.</string>
</resources>